[project]
name = "prod"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.0",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.7",
    "langsmith>=0.9.7",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "slowapi>=0.1.10",
    "unicorn>=2.1.4",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
]
